<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/monthChangeLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="60dp"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/previousButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="50dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/purple_primary"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_arrow_back"
                            app:tint="@color/white" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <TextView
                android:id="@+id/displayDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/nextButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="50dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/purple_primary"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow_forward"
                            app:tint="@color/white" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/daysLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthChangeLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/sun"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/mon"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/tue"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/wed"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/thu"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/fri"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/sat"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daysLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>